form options updated

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
 							<select name="productos" required>
 								<option value="" disabled selected>Elige una opción...</option>
 								<option value="Banderas Publicitarias">Banderas Publicitarias</option>
-								<option value="Banderas Publicitarias">Banderas Publicitarias</option>
-								<option value="Banderas Publicitarias">Banderas Publicitarias</option>
+								<option value="Carpas Iglú Publicitarias">Carpas Iglú Publicitarias</option>
+								<option value="Toldos Publicitarios">Toldos Publicitarios</option>
 							</select>
 						</div>
 
