all pages updated

--- a/banderas_publicitarias.html
+++ b/banderas_publicitarias.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Fulltextil | Carpas - Banderas - Toldos - Inflables y Más...</title>
+		<title>Fulltextil | Banderas Publicitarias</title>
 		<!-- Slider -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css"
@@ -17,13 +17,13 @@
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			name="description"
 		/>
-		<meta content="Fulltextil | Carpas - Banderas - Toldos - Inflables y Más..." property="og:title" />
+		<meta content="Fulltextil | Banderas Publicitarias" property="og:title" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			property="og:description"
 		/>
 		<meta content="assets/fulltextil-cover.jpg" property="og:image" />
-		<meta content="Fulltextil | Carpas - Banderas - Toldos - Inflables y Más..." property="twitter:title" />
+		<meta content="Fulltextil | Banderas Publicitarias" property="twitter:title" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			property="twitter:description"
@@ -64,7 +64,7 @@
 					<!-- Menu -->
 					<div class="menu">
 						<div class="menu__box">
-							<a href="/" class="menu__link link--active">Inicio</a>
+							<a href="/" class="menu__link">Inicio</a>
 							<div href="#" class="menu__dropdown">
 								<div class="menu__dropdown--link">
 									<div class="menu__dropdown--text">Productos</div>
@@ -80,7 +80,7 @@
 									</div>
 								</div>
 								<div class="menu__dropdown--pages close">
-									<a href="banderas_publicitarias.html" class="menu__link">Banderas Publicitarias</a>
+									<a href="banderas_publicitarias.html" class="menu__link link--active">Banderas Publicitarias</a>
 									<a href="carpas-iglu-publicitarias.html" class="menu__link">Carpas Iglú Publicitarias</a>
 									<a href="toldos-publicitarios.html" class="menu__link">Toldos Publicitarios</a>
 								</div>
@@ -115,13 +115,12 @@
 			<div class="container">
 				<div class="header">
 					<div class="header__content">
-						<h1>Productos de Alto Impacto</h1>
+						<h1>Banderas Publicitarias</h1>
 						<p>
-							Para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca.
-							Asesoramos a nuestros clientes en la selección de diseño y producto para cumplir los objetivos de su marca
-							o evento.
+							Apuesta Segura. Las banderas juegan un papel visual muy importante! Personalizamos con su Publicidad o
+							Logotipo, Banderas Publicitarias con una amplia gama de medidas y tipos de bases.
 						</p>
-						<a href="#products" class="btn btn--primary">Mira nuestros productos</a>
+						<a href="#features" class="btn btn--primary">Mira nuestras banderas</a>
 					</div>
 					<div class="header__image">
 						<img src="assets/placeholder-image.jpg" alt="" />
@@ -155,45 +154,58 @@
 			</div>
 		</section>
 
-		<!-- SECTION: PRODUCTS -->
-		<section id="products">
+		<!-- SSECTION: FEATURES -->
+		<section id="features">
 			<div class="container">
-				<div class="products__header">
-					<h2>Nuestros Productos Publicitarios</h2>
-					<p>Disponemos de una variedad de productos publicitarios para exterior.</p>
-				</div>
-				<div class="products__grid">
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Toldo Publicitario" />
-						<h3>Toldo Publicitario</h3>
+				<h2>Características</h2>
+				<div class="features__grid">
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/bandera-medidas-icon.svg" alt="bandera medidas icono" />
+						</div>
+						<h3>Medidas</h3>
 						<p class="text-small">
-							La mejor manera de configurar el área de su marca en un evento es con nuestros toldos publicitarios.
-							Disponemos de calidades de clase mundial, techo de lona impermeable con filtros, opción de personalización
-							según diseño de su marca, confección de muro completo, muro medio cuerpo, puerta y ventana. Nuestros
-							toldos publicitarios están diseñados para ser fácil de usar y resistir el paso del tiempo.
+							Las banderas no solo funcionan perfectamente bien por sí solas, sino que también las puede adjuntar a
+							otros productos promocionales. Las diferentes medidas que disponemos van de la mano al impacto visual que
+							quieras obtener. (50x200cm, 70x230cm, 80x250cm, 100x300cm)
 						</p>
-						<a href="toldos-publicitarios.html" class="btn btn--primary">Más Información</a>
 					</div>
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Carpa Iglú Publicitaria" />
-						<h3>Carpa Iglú Publicitaria</h3>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/bandera-bases-icon.svg" alt="bandera bases icono" />
+						</div>
+						<h3>Bases</h3>
 						<p class="text-small">
-							Impacto visual al instante, nuestras carpas iglú publicitarias son creadas con las mejores lonas poliéster
-							y tratamientos contra rayos UV del mercado. La confección con doble costura, estructura firme, fácil
-							armado y aplicación de logos hace un producto que no puede faltar en tu evento.
+							Disponemos de diferentes bases para posicionar tus banderas en cualquier tipo de terreno. (Tipo X, Tipo B,
+							Estaca, y Contrapeso)
 						</p>
-						<a href="carpas-iglu-publicitarias.html" class="btn btn--primary">Más Información</a>
 					</div>
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Bandera Publicitaria" />
-						<h3>Bandera Publicitaria</h3>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/bandera-mastil-icon.svg" alt="bandera mástil icono" />
+						</div>
+						<h3>Mástil</h3>
 						<p class="text-small">
-							Versátil, fácil armado, visibilidad de marca 100%, estas son las grandes características que pueden
-							ofrecer nuestras banderas publicitarias. Confeccionadas con telas de alta resistencia, impresión directa,
-							traspaso de tinta 90% y elástico con doble costura. Lleva tu marca donde quieras y cuando quieras con este
-							producto de alto impacto visual.
+							Nuestros mástiles son creados con perfiles redondos de Aluminio en terminación matte, con espesor desde
+							3/4, 7/8 y 1” pulgada, así logramos la firmeza necesaria para cualquier tipo de clima y terreno.
 						</p>
-						<a href="banderas_publicitarias.html" class="btn btn--primary">Más Información</a>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/bandera-diseno-icon.svg" alt="bandera diseño icono" />
+						</div>
+						<h3>Diseño</h3>
+						<p class="text-small">
+							Te ayudamos en crear la información necesaria para tu objetivo, te asesoramos en colores, tipografia,
+							ubicación de elementos y tamaños para crear al 100% un impacto visual en el consumidor.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -205,13 +217,12 @@
 				<div class="info__grid">
 					<img src="assets/placeholder-image-medium.jpg" alt="" />
 					<div class="info__content">
-						<h2>Impresión Digital</h2>
+						<h2>Impresión</h2>
 						<p>
-							En Fulltextil contamos con una amplia gama de sustratos blandos y rígidos para publicidad. Impresiones con
-							tintas eco-solventes y UV para mayor vida a tu material exterior e interior. Nuestro objetivo es
-							solucionar cada necesidad de tu marca o negocio.
+							El método de impresión por sublimación permite la personalización de los tejidos con la imagen deseada.
+							Este proceso consiste en fundir químicamente la tinta con las fibras textiles consiguiendo un acabado
+							resistente y de alta calidad.
 						</p>
-						<a href="#contact" class="btn btn--primary">Más Información</a>
 					</div>
 				</div>
 			</div>
