--- a/carpas-iglu-publicitarias.html
+++ b/carpas-iglu-publicitarias.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Fulltextil | Carpas - Banderas - Toldos - Inflables y Más...</title>
+		<title>Fulltextil | Carpa Iglú Publicitaria</title>
 		<!-- Slider -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css"
@@ -17,13 +17,13 @@
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			name="description"
 		/>
-		<meta content="Fulltextil | Carpas - Banderas - Toldos - Inflables y Más..." property="og:title" />
+		<meta content="Fulltextil | Carpa Iglú Publicitaria" property="og:title" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			property="og:description"
 		/>
 		<meta content="assets/fulltextil-cover.jpg" property="og:image" />
-		<meta content="Fulltextil | Carpas - Banderas - Toldos - Inflables y Más..." property="twitter:title" />
+		<meta content="Fulltextil | Carpa Iglú Publicitaria" property="twitter:title" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			property="twitter:description"
@@ -64,7 +64,7 @@
 					<!-- Menu -->
 					<div class="menu">
 						<div class="menu__box">
-							<a href="/" class="menu__link link--active">Inicio</a>
+							<a href="/" class="menu__link">Inicio</a>
 							<div href="#" class="menu__dropdown">
 								<div class="menu__dropdown--link">
 									<div class="menu__dropdown--text">Productos</div>
@@ -81,7 +81,7 @@
 								</div>
 								<div class="menu__dropdown--pages close">
 									<a href="banderas_publicitarias.html" class="menu__link">Banderas Publicitarias</a>
-									<a href="carpas-iglu-publicitarias.html" class="menu__link">Carpas Iglú Publicitarias</a>
+									<a href="carpas-iglu-publicitarias.html" class="menu__link link--active">Carpas Iglú Publicitarias</a>
 									<a href="toldos-publicitarios.html" class="menu__link">Toldos Publicitarios</a>
 								</div>
 							</div>
@@ -115,13 +115,13 @@
 			<div class="container">
 				<div class="header">
 					<div class="header__content">
-						<h1>Productos de Alto Impacto</h1>
+						<h1>Carpa Iglú Publicitaria</h1>
 						<p>
-							Para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca.
-							Asesoramos a nuestros clientes en la selección de diseño y producto para cumplir los objetivos de su marca
-							o evento.
+							Impacto visual al instante, nuestras carpas iglú publicitarias son creadas con las mejores lonas poliéster
+							certificadas, impermeables y tratamientos contra rayos UV del mercado. Personalizamos al 100% este
+							producto con tu marca, alcanzando un posicionamiento insuperable en eventos!
 						</p>
-						<a href="#products" class="btn btn--primary">Mira nuestros productos</a>
+						<a href="#features" class="btn btn--primary">Mira nuestras carpas iglú</a>
 					</div>
 					<div class="header__image">
 						<img src="assets/placeholder-image.jpg" alt="" />
@@ -155,63 +155,111 @@
 			</div>
 		</section>
 
-		<!-- SECTION: PRODUCTS -->
-		<section id="products">
+		<!-- SSECTION: FEATURES -->
+		<section id="features">
 			<div class="container">
-				<div class="products__header">
-					<h2>Nuestros Productos Publicitarios</h2>
-					<p>Disponemos de una variedad de productos publicitarios para exterior.</p>
-				</div>
-				<div class="products__grid">
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Toldo Publicitario" />
-						<h3>Toldo Publicitario</h3>
-						<p class="text-small">
-							La mejor manera de configurar el área de su marca en un evento es con nuestros toldos publicitarios.
-							Disponemos de calidades de clase mundial, techo de lona impermeable con filtros, opción de personalización
-							según diseño de su marca, confección de muro completo, muro medio cuerpo, puerta y ventana. Nuestros
-							toldos publicitarios están diseñados para ser fácil de usar y resistir el paso del tiempo.
-						</p>
-						<a href="toldos-publicitarios.html" class="btn btn--primary">Más Información</a>
-					</div>
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Carpa Iglú Publicitaria" />
-						<h3>Carpa Iglú Publicitaria</h3>
-						<p class="text-small">
-							Impacto visual al instante, nuestras carpas iglú publicitarias son creadas con las mejores lonas poliéster
-							y tratamientos contra rayos UV del mercado. La confección con doble costura, estructura firme, fácil
-							armado y aplicación de logos hace un producto que no puede faltar en tu evento.
-						</p>
-						<a href="carpas-iglu-publicitarias.html" class="btn btn--primary">Más Información</a>
-					</div>
-					<div class="products__card">
-						<img src="assets/placeholder-image-small.jpg" alt="Bandera Publicitaria" />
-						<h3>Bandera Publicitaria</h3>
-						<p class="text-small">
-							Versátil, fácil armado, visibilidad de marca 100%, estas son las grandes características que pueden
-							ofrecer nuestras banderas publicitarias. Confeccionadas con telas de alta resistencia, impresión directa,
-							traspaso de tinta 90% y elástico con doble costura. Lleva tu marca donde quieras y cuando quieras con este
-							producto de alto impacto visual.
-						</p>
-						<a href="banderas_publicitarias.html" class="btn btn--primary">Más Información</a>
-					</div>
-				</div>
-			</div>
-		</section>
+				<h2>Características</h2>
 
-		<!-- SECTION: INFO -->
-		<section id="info">
-			<div class="container">
-				<div class="info__grid">
-					<img src="assets/placeholder-image-medium.jpg" alt="" />
-					<div class="info__content">
-						<h2>Impresión Digital</h2>
-						<p>
-							En Fulltextil contamos con una amplia gama de sustratos blandos y rígidos para publicidad. Impresiones con
-							tintas eco-solventes y UV para mayor vida a tu material exterior e interior. Nuestro objetivo es
-							solucionar cada necesidad de tu marca o negocio.
+				<!-- Features Grid -->
+				<div class="features__grid">
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/carpa-iglu-medidas-icon.svg" alt="carpa iglú medidas icono" />
+						</div>
+						<h3>Medidas</h3>
+						<p class="text-small">
+							Los formatos disponibles de nuestras Carpas Iglú Publicitarias te ayudaran a realizar su armado en sitios
+							de medidas limitantes y manteniendo la presencia imponente de tu marca o negocio. (4x4, 5x5, 6x6)
 						</p>
-						<a href="#contact" class="btn btn--primary">Más Información</a>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/carpa-iglu-estructura-icon.svg" alt="carpa iglú estructura icono" />
+						</div>
+						<h3>Estructura</h3>
+						<p class="text-small">
+							La fabricación es realizada en fierro rectangular con un espesor óptimo para un peso considerable a la
+							hora de transportarla, manteniendo a su vez una firmeza y seguridad en el armado final.
+						</p>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/carpa-iglu-armado-icon.svg" alt="carpa iglú armado icono" />
+						</div>
+						<h3>Armado</h3>
+						<p class="text-small">
+							Es recomendable realizar su armado con un mínimo de 2 personas, siguiendo y cumpliendo el manual de armado
+							para una mayor seguridad.
+						</p>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/carpa-iglu-diseno-icon.svg" alt="carpa iglú diseño icono" />
+						</div>
+						<h3>Diseño</h3>
+						<p class="text-small">
+							Te ayudamos en crear la información necesaria para tu objetivo, te asesoramos en colores, tipografía,
+							ubicación de elementos y tamaños para crear al 100% un impacto visual en el consumidor.
+						</p>
+					</div>
+				</div>
+
+				<!-- Features Grid -->
+				<div class="features__grid gap">
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/impresion-directa-icon.svg" alt="impresión directa icono" />
+						</div>
+						<h3>Impresión directa</h3>
+						<p class="text-small">
+							El método de impresión por sublimación permite la personalización de los tejidos con la imagen deseada.
+							Este proceso consiste en fundir químicamente la tinta con las fibras textiles consiguiendo un acabado
+							resistente y de alta calidad.
+						</p>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/estampado-icon.svg" alt="estampado icono" />
+						</div>
+						<h3>Estampado</h3>
+						<p class="text-small">
+							En este proceso es un tanto más limitante, ya que la aplicación de logos se puede realizar con un máximo
+							de 3 colores y un área de estampado determinada.
+						</p>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/lonas-certificadas-icon.svg" alt="lonas certificadas icono" />
+						</div>
+						<h3>Lonas certificadas</h3>
+						<p class="text-small">
+							En Fulltextil nos aseguramos de entregar un producto de calidad, por eso no escatimamos a la hora de
+							adquirir suministros. Te invitamos a solicitar más información.
+						</p>
+					</div>
+
+					<!-- Features Card -->
+					<div class="features__card">
+						<div class="features__icon">
+							<img src="assets/confeccion-icon.svg" alt="confección icono" />
+						</div>
+						<h3>Confección</h3>
+						<p class="text-small">
+							En Fulltextil tenemos cómo prioridad entregar un producto 100% garantizado, por eso solo trabajamos con
+							personal calificado y maquinaria certificada a nivel mundial.
+						</p>
 					</div>
 				</div>
 			</div>
