link to homepage updated

--- a/banderas_publicitarias.html
+++ b/banderas_publicitarias.html
@@ -58,14 +58,14 @@
 			<div class="container">
 				<div class="nav">
 					<!-- Logo -->
-					<a href="/" class="fulltextil logo">
+					<a href="index.html" class="fulltextil logo">
 						<img src="assets/fulltextil-logo.svg" alt="Logo FullTextil" />
 					</a>
 					<!-- Menu -->
 					<div class="menu">
 						<div class="menu__box">
-							<a href="/" class="menu__link">Inicio</a>
-							<div href="#" class="menu__dropdown">
+							<a href="index.html" class="menu__link">Inicio</a>
+							<div class="menu__dropdown">
 								<div class="menu__dropdown--link">
 									<div class="menu__dropdown--text">Productos</div>
 									<div class="menu__dropdown--arrow">
@@ -314,7 +314,7 @@
 					<div class="footer__row">
 						<!-- Column Left -->
 						<div class="footer__column">
-							<a href="https://fulltextil.cl/" class="logo__link">
+							<a href="index.html" class="logo__link">
 								<img src="assets/fulltextil-logo-footer.svg" alt="fulltextil logo" />
 							</a>
 							<div class="footer__links">
