--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<!-- Styles -->
 		<link rel="stylesheet" href="styles.css" />
 		<!-- Description -->
+		<meta name="robots" content="INDEX, FOLLOW" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			name="description"
@@ -124,7 +125,7 @@
 						<a href="#products" class="btn btn--primary">Mira nuestros productos</a>
 					</div>
 					<div class="header__image">
-						<img src="assets/placeholder-image.jpg" alt="" />
+						<img src="assets/homepage-header-min.jpg" alt="Productos de Alto Impacto" />
 					</div>
 				</div>
 			</div>
@@ -164,8 +165,8 @@
 				</div>
 				<div class="products__grid">
 					<div class="products__card">
-						<img src="assets/toldos-homepage-min.jpg" alt="Toldo Publicitario" />
-						<h3>Toldo Publicitario</h3>
+						<img src="assets/toldos-homepage-min.jpg" alt="Toldos Publicitarios" />
+						<h3>Toldos Publicitarios</h3>
 						<p class="text-small">
 							La mejor manera de configurar el área de su marca en un evento es con nuestros toldos publicitarios.
 							Disponemos de calidades de clase mundial, techo de lona impermeable con filtros, opción de personalización
@@ -175,8 +176,8 @@
 						<a href="toldos-publicitarios.html" class="btn btn--primary">Más Información</a>
 					</div>
 					<div class="products__card">
-						<img src="assets/carpas-homepage-min.jpg" alt="Carpa Iglú Publicitaria" />
-						<h3>Carpa Iglú Publicitaria</h3>
+						<img src="assets/carpas-homepage-min.jpg" alt="Carpas Iglú Publicitarias" />
+						<h3>Carpas Iglú Publicitarias</h3>
 						<p class="text-small">
 							Impacto visual al instante, nuestras carpas iglú publicitarias son creadas con las mejores lonas poliéster
 							y tratamientos contra rayos UV del mercado. La confección con doble costura, estructura firme, fácil
@@ -185,8 +186,8 @@
 						<a href="carpas-iglu-publicitarias.html" class="btn btn--primary">Más Información</a>
 					</div>
 					<div class="products__card">
-						<img src="assets/banderas-homepage-min.jpg" alt="Bandera Publicitaria" />
-						<h3>Bandera Publicitaria</h3>
+						<img src="assets/banderas-homepage-min.jpg" alt="Banderas Publicitarias" />
+						<h3>Banderas Publicitarias</h3>
 						<p class="text-small">
 							Versátil, fácil armado, visibilidad de marca 100%, estas son las grandes características que pueden
 							ofrecer nuestras banderas publicitarias. Confeccionadas con telas de alta resistencia, impresión directa,
@@ -205,11 +206,11 @@
 				<div class="info__grid">
 					<img src="assets/impresion-digital-min.jpg" alt="" />
 					<div class="info__content">
-						<h2>Impresión Digital</h2>
+						<h2>Somos Fabricantes</h2>
 						<p>
-							En Fulltextil contamos con una amplia gama de sustratos blandos y rígidos para publicidad. Impresiones con
-							tintas eco-solventes y UV para mayor vida a tu material exterior e interior. Nuestro objetivo es
-							solucionar cada necesidad de tu marca o negocio.
+							En Fulltextil creamos productos de alto impacto comercial publicitario, te ayudamos a decidir tu próxima
+							inversión para tu marca o evento con un costo de fabricantes. Te invitamos conocer más de nosotros y
+							cotizar tu próximo proyecto.
 						</p>
 						<a href="#contact" class="btn btn--primary">Más Información</a>
 					</div>
@@ -299,9 +300,9 @@
 									<img src="assets/icon-whatsapp-blue.svg" alt="icono Whatsapp" />
 									<span>Whatsapp: +56 9 5510 4141</span>
 								</a>
-								<a href="https://goo.gl/maps/ivkw5UsZ2ggYmcNs7" target="_blank" class="footer__item">
+								<a href="https://goo.gl/maps/GcBsjMFgfAQtVX6v7" target="_blank" class="footer__item">
 									<img src="assets/icon-map-blue.svg" alt="icono dirección" />
-									<span>Av. Lib. Bdo. O'higgins 1302, Santiago.</span>
+									<span>Av. el Carmen 1397, Huechuraba.</span>
 								</a>
 							</div>
 						</div>
