--- a/banderas_publicitarias.html
+++ b/banderas_publicitarias.html
@@ -13,6 +13,7 @@
 		<!-- Styles -->
 		<link rel="stylesheet" href="styles.css" />
 		<!-- Description -->
+		<meta name="robots" content="INDEX, FOLLOW" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			name="description"
@@ -310,9 +311,9 @@
 									<img src="assets/icon-whatsapp-blue.svg" alt="icono Whatsapp" />
 									<span>Whatsapp: +56 9 5510 4141</span>
 								</a>
-								<a href="https://goo.gl/maps/ivkw5UsZ2ggYmcNs7" target="_blank" class="footer__item">
+								<a href="https://goo.gl/maps/GcBsjMFgfAQtVX6v7" target="_blank" class="footer__item">
 									<img src="assets/icon-map-blue.svg" alt="icono dirección" />
-									<span>Av. Lib. Bdo. O'higgins 1302, Santiago.</span>
+									<span>Av. el Carmen 1397, Huechuraba.</span>
 								</a>
 							</div>
 						</div>
