--- a/toldos-publicitarios.html
+++ b/toldos-publicitarios.html
@@ -13,6 +13,7 @@
 		<!-- Styles -->
 		<link rel="stylesheet" href="styles.css" />
 		<!-- Description -->
+		<meta name="robots" content="INDEX, FOLLOW" />
 		<meta
 			content="En Fulltextil creamos productos de alto impacto para eventos en exterior e interior. Te ayudamos a diseñar y elegir la mejor opción para tu marca."
 			name="description"
@@ -115,7 +116,7 @@
 			<div class="container">
 				<div class="header">
 					<div class="header__content">
-						<h1>Toldos Publicitarios Corporativos</h1>
+						<h1>Toldos Publicitarios</h1>
 						<p>
 							Impacto visual al instante, nuestros toldos publicitarios son creados con las mejores lonas poliéster y
 							tratamientos contra rayos UV del mercado. Personalizamos al 100% este producto con tu marca, alcanzando un
@@ -347,9 +348,9 @@
 									<img src="assets/icon-whatsapp-blue.svg" alt="icono Whatsapp" />
 									<span>Whatsapp: +56 9 5510 4141</span>
 								</a>
-								<a href="https://goo.gl/maps/ivkw5UsZ2ggYmcNs7" target="_blank" class="footer__item">
+								<a href="https://goo.gl/maps/GcBsjMFgfAQtVX6v7" target="_blank" class="footer__item">
 									<img src="assets/icon-map-blue.svg" alt="icono dirección" />
-									<span>Av. Lib. Bdo. O'higgins 1302, Santiago.</span>
+									<span>Av. el Carmen 1397, Huechuraba.</span>
 								</a>
 							</div>
 						</div>
